# sggw_lab_2

./: alembic.ini  pyproject.toml  sqlalchemy_project.db
migrations/: env.py
migrations/versions/: 655dd8cf7995_create_subjects.py  ce642f3f0a64_create_initial_tables.py
src/lab_2_2/: main.py  models.py
