[project]
name = "lab-2-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomasz Szłapa",email = "tomasz.szlapa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "SQLAlchemy>=1.4,<1.5",
    "alembic (<1.12)"
]

[tool.poetry]
packages = [{include = "lab_2_2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
